--- a/frontend/navbar/nav.html
+++ b/frontend/navbar/nav.html
@@ -14,27 +14,35 @@
 </head>
 
 <body>
-    <nav>
-        <i class="fa fa-bars" aria-hidden="true"></i>
+    <header>
+        <nav class="nav-deactive">
+            <i class="fa fa-bars j" aria-hidden="true"></i>
+            <i class="fa fa-times" aria-hidden="true"></i>
 
-        <ul>
-            <li>
-                <a href="#"> Home</a>
-            </li>
-            <li>
-                <a href="#"> Routes</a>
-            </li>
-            <li>
-                <a href="#"> Location</a>
-            </li>
-            <li>
-                <a href="#">Contact</a>
-            </li>
-            <li>
-                <a href="#"> Agent</a>
-            </li>
-        </ul>
-    </nav>
+            <ul class="ul-deactive">
+                <li>
+                    <a href="#"><i class="fa fa-home" aria-hidden="true"></i> Home</a>
+                </li>
+                <li>
+                    <a href="#">
+                        <i class="fa fa-road" aria-hidden="true"></i> Routes</a>
+                </li>
+                <li>
+                    <a href="#">
+                        <i class="fa fa-location-arrow" aria-hidden="true"></i> Location
+                    </a>
+                </li>
+                <li>
+                    <a href="#"> <i class="fas fa-microphone-slash"></i> Contact</a>
+                </li>
+                <li>
+                    <a href="#">
+                        <i class="fa fa-align-center" aria-hidden="true"></i> Agent</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
 </body>
+<script src="nav.js"></script>
 
 </html>
